--- a/my-site-3/index.html
+++ b/my-site-3/index.html
@@ -116,7 +116,7 @@
 		<img  class="imgG" src="images/book2/web_2.jpg" ></img>
 		<ul></ul>
 		<video width="620" height="400" controls autoplay>
-  			<source src="Barbapapa3.mp4" type="video/mp4">
+  			<source src="barbapapa3.mp4" type="video/mp4">
   		</video>
   		<ul></ul>
 		<img  class="imgG" src="images/book2/web_4.jpg" ></img>
