--- a/my-site-6/index.html
+++ b/my-site-6/index.html
@@ -125,106 +125,106 @@ img {vertical-align: middle;}
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/18.jpg" style="width:100%" >
-  <div class="text">31/32</div>
+  <div class="text"></div>
 </div>
 
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/17.jpg" style="width:100%" >
-  <div class="text">29/30</div>
+  <div class="text">32/31</div>
 </div>
 
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/16.jpg" style="width:100%" >
-  <div class="text">27/28</div>
+  <div class="text">30/29</div>
 </div>
 
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/15.jpg" style="width:100%" >
-  <div class="text">27/28</div>
+  <div class="text">28/27</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/14.jpg" style="width:100%" >
-  <div class="text">25/26</div>
+  <div class="text">26/25</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/13.jpg" style="width:100%" >
-  <div class="text">23/24</div>
+  <div class="text">24/23</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/12.jpg" style="width:100%" >
-  <div class="text">21/22</div>
+  <div class="text">22/21</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/11.jpg" style="width:100%" >
-  <div class="text">19/20</div>
+  <div class="text">20/19</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/10.jpg" style="width:100%" >
-  <div class="text">17/18</div>
+  <div class="text">18/17</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/9.jpg" style="width:100%" >
-  <div class="text">15/16</div>
+  <div class="text">16/15</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/8.jpg" style="width:100%" >
-  <div class="text">13/14</div>
+  <div class="text">14/13</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/7.jpg" style="width:100%" >
-  <div class="text">11/12</div>
+  <div class="text">12/11</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/6.jpg" style="width:100%" >
-  <div class="text">9/10</div>
+  <div class="text">10/9</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/5.jpg" style="width:100%" >
-  <div class="text">7/8</div>
+  <div class="text">8/7</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/4.jpg" style="width:100%" >
-  <div class="text">5/6</div>
+  <div class="text">6/5</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/3.jpg" style="width:100%" >
-  <div class="text">3/4</div>
+  <div class="text">4/3</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
   <img src="images/new/2.jpg" style="width:100%" >
-  <div class="text">1/2</div>
+  <div class="text">2/1</div>
 </div>
 
 <div class="mySlides fade">
